[package]
name = "data_struct_benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "data_struct_benchmark"
harness = false